--- a/META.yml
+++ b/META.yml
@@ -6,10 +6,10 @@ author:
   - Jan Dubois <jand@activestate.com>
 license: perl
 requires: 
-  perl: 5.6
+  perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-  homepage: http://code.google.com/p/libwin32/
+  repository: https://github.com/jandubois/libwin32
 meta-spec:
    version: 1.3
    url: http://module-build.sourceforge.net/META-spec-v1.3.html
